--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "object-curly-newline": "off",
     "no-underscore-dangle": "off",
     "prefer-regex-literals": "off",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "react/function-component-definition": "off"
   }
 }
