--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "no-underscore-dangle": "off",
     "prefer-regex-literals": "off",
     "implicit-arrow-linebreak": "off",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "linebreak-style": ["error", "windows"]
   }
 }
