added lib bwip-js

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,6 @@
     "implicit-arrow-linebreak": "off",
     "react/function-component-definition": "off",
     "react/require-default-props": "off",
-    "linebreak-style": ["error", "windows"]
+    "linebreak-style": "off"
   }
 }
