--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "implicit-arrow-linebreak": "off",
     "react/function-component-definition": "off",
     "react/require-default-props": "off",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "import/no-extraneous-dependencies": "off",
+    "jsx-a11y/click-events-have-key-events": "off"
   }
 }
