--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     "import/no-extraneous-dependencies": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "import/prefer-default-export": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-debugger": "warn"
   }
 }
