--- a/amvera.yml
+++ b/amvera.yml
@@ -2,4 +2,13 @@ meta:
   environment: node
   toolchain:
     name: npm
-    version: 18
+    version: '20'
+build:
+  artifacts:
+    '*': /
+  additionalCommands: npm run build
+run:
+  scriptName: index.js
+  command: npm run start
+  persistenceMount: /data
+  containerPort: 80
