--- a/amvera.yml
+++ b/amvera.yml
@@ -2,13 +2,11 @@ meta:
   environment: node
   toolchain:
     name: npm
-    version: '20'
+    version: 18
+
 build:
-  artifacts:
-    '*': /
   additionalCommands: npm run build
+
 run:
-  scriptName: index.js
   command: npm run start
-  persistenceMount: /data
-  containerPort: 80
+  containerPort: 3000
